--- a/RecipeHelper/src/app/recipe-detail/recipe-detail.component.html
+++ b/RecipeHelper/src/app/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,12 @@
 <div class="button-row">
-  <a [routerLink]="['/books']" color="primary" mat-raised-button>
+  <a [routerLink]="['/recipes']" color="primary" mat-raised-button>
     <mat-icon>list</mat-icon>
   </a>
 </div>
 <mat-card class="example-card">
   <mat-card-header>
-    <mat-card-title><h2>{{book.title}}</h2></mat-card-title>
-    <mat-card-subtitle>{{book.description}}</mat-card-subtitle>
+    <mat-card-title><h2>{{recipe.title}}</h2></mat-card-title>
+    <mat-card-subtitle>{{recipe.ingredients}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <dl>
