--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -6,13 +6,10 @@
 <div class="example-container mat-elevation-z8">
   <table #table [dataSource]="dataSource" mat-table>
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
     <!-- Title Column -->
     <ng-container matColumnDef="title">
       <th *matHeaderCellDef mat-header-cell>Title</th>
-      <td *matCellDef="let element" class="isbn-col" mat-cell> {{element.title}} </td>
+      <td *matCellDef="let element" class="title" mat-cell> {{element.title}} </td>
     </ng-container>
 
     <!-- Title Column -->
