--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -31,9 +31,9 @@
   </div>
 </div>
 
-<mat-form-field (ngSubmit)='getEdamamRecipes($event)' color='primary' id='search-input' class='full-width' appearance='outline'>
+<mat-form-field  color='primary' id='search-input' class='full-width' appearance='outline'>
   <mat-label color='red'>Search Recipes</mat-label>
-  <input #searchRecipes matInput  [(ngModel)]='searchValue' name='searchRecipes' [value]='searchValue' (keyup.enter)='getEdamamRecipes($event)'>
+  <input #searchRecipes matInput  [(ngModel)]='searchValue' name='searchRecipes' [value]='searchValue' (keyup.enter)='getEdamamRecipes(searchValue)'>
 </mat-form-field>
 <button mat-raised-button color="primary" (click)='getEdamamRecipes(searchValue)' id='submit-search' type='submit' for='searchRecipes'>Submit</button>
 
