--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -1,6 +1,6 @@
 <div class="button-row">
   <a [routerLink]="['/recipe-create']" color="primary" mat-raised-button>
-    <mat-icon>add</mat-icon>
+    Add your own Recipe <mat-icon>add_box</mat-icon>
   </a>
 </div>
 <div>
@@ -42,7 +42,7 @@
     <table #table [dataSource]="dataEdamamApi" mat-table>
 
       <ng-container matColumnDef="name">
-        <th *matHeaderCellDef mat-header-cell>Name</th>
+        <th *matHeaderCellDef mat-header-cell>Recipe</th>
         <td *matCellDef="let element" class="name" mat-cell> {{element.name}} </td>
       </ng-container>
 
