--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -1,3 +1,9 @@
+<nav class="navBar">
+  <a class="active" href="#home">Home</a>
+  <a class="active" href="#home">Search Recipes</a>
+  <a class="active" href="#home">My Recipes</a>
+</nav>
+
 <div class="button-row">
   <a [routerLink]="['/recipe-create']" color="primary" mat-raised-button>
     <mat-icon>add</mat-icon>
