--- a/RecipeHelper/src/app/recipe/recipe.component.css
+++ b/RecipeHelper/src/app/recipe/recipe.component.css
@@ -14,3 +14,26 @@
 .button-row {
   margin: 10px 0;
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* NAVBAR */
+
+.navBar {
+  background-color: #333;
+  overflow: hidden;
+  color: white;
+}
+
+.navBar a {
+  float: left;
+  color: #f2f2f2;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navBar a:hover {
+  background-color: #f6d081;
+  color: black;
+}
