update to navBar

--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -1,7 +1,8 @@
 <nav class="navBar">
-  <a class="active" href="#home">Home</a>
-  <a class="active" href="#home">Search Recipes</a>
-  <a class="active" href="#home">My Recipes</a>
+  <a class="active" href="recipe-create">Home</a>
+  <a  href="#home">Search Recipe</a>
+  <a  href="#home">My Recipe</a>
+  <a  href="recipe-create">Create Reicpe</a>
 </nav>
 
 <div class="button-row">
