update to navBar

--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -2,12 +2,12 @@
   <a class="active" href="recipe-create">Home</a>
   <a  href="#home">Search Recipe</a>
   <a  href="#home">My Recipe</a>
-  <a  href="recipe-create">Create Reicpe</a>
+  <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
 
 <div class="button-row">
   <a [routerLink]="['/recipe-create']" color="primary" mat-raised-button>
-    <mat-icon>add</mat-icon>
+    Create Recipe <mat-icon>add_box</mat-icon>
   </a>
 </div>
 <div>
