updated navBar and icons

--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -1,6 +1,6 @@
 <div class="button-row">
   <a [routerLink]="['/recipes']" color="primary" mat-raised-button>
-    <mat-icon>list</mat-icon>
+    Back to Search <mat-icon>search</mat-icon>
   </a>
 </div>
 <form (ngSubmit)="onFormSubmit(recipeForm.value)" [formGroup]="recipeForm">
