--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -1,6 +1,6 @@
 <nav class="navBar">
   <a class="active" href="recipe-create">Home</a>
-  <a  href="#home">Search Recipe</a>
+  <a  href="recipe-search">Search Recipe</a>
   <a  href="#home">My Recipe</a>
   <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
@@ -37,6 +37,7 @@
     </table>
   </div>
 </div>
+
 
 <mat-form-field  color='primary' id='search-input' class='full-width' appearance='outline'>
   <mat-label color='red'>Search Recipes</mat-label>
