--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -1,3 +1,9 @@
+<nav class="navBar">
+  <a class="active" href="recipe-create">Home</a>
+  <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
+  <a  [routerLink]="['/recipe-list']" >My Recipe</a>
+  <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
+</nav>
 <div class="button-row">
   <a [routerLink]="['/recipes']" color="primary" mat-raised-button>
     Back to Search <mat-icon>search</mat-icon>
