--- a/RecipeHelper/src/app/recipe-detail/recipe-detail.component.css
+++ b/RecipeHelper/src/app/recipe-detail/recipe-detail.component.css
@@ -1,7 +1,39 @@
-.example-card {
-  max-width: 500px;
+.example-container {
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  min-width: 300px;
+  overflow: auto;
+}
+
+.isbn-col {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
 }
 
 .button-row {
   margin: 10px 0;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* NAVBAR */
+
+.navBar {
+  background-color: #333;
+  overflow: hidden;
+  color: white;
+}
+
+.navBar a {
+  float: left;
+  color: #f2f2f2;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navBar a:hover {
+  background-color: #f6d081;
+  color: black;
 }
