--- a/RecipeHelper/src/app/recipe-edit/recipe-edit.component.html
+++ b/RecipeHelper/src/app/recipe-edit/recipe-edit.component.html
@@ -1,4 +1,9 @@
-<!-- write code to edit and save book i this component -->
+<nav class="navBar">
+  <a class="active" href="recipe-create">Home</a>
+  <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
+  <a  [routerLink]="['/recipe-list']" >My Recipe</a>
+  <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
+</nav>
 <div class="button-row">
   <a mat-raised-button color="primary" [routerLink]="['/recipes']">
     <mat-icon>list</mat-icon>
