--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.html
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.html
@@ -1,5 +1,11 @@
-<h1>hello world!</h1>
-<!-- <mat-form-field  color='primary' id='search-input' class='full-width' appearance='outline'>
+<nav class="navBar">
+    <a class="active" href="recipe-create">Home</a>
+    <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
+    <a  [routerLink]="['/recipe-list']" >My Recipe</a>
+    <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
+</nav>
+  
+  <mat-form-field  color='primary' id='search-input' class='full-width' appearance='outline'>
     <mat-label color='red'>Search Recipes</mat-label>
     <input #searchRecipes matInput  [(ngModel)]='searchValue' name='searchRecipes' [value]='searchValue' (keyup.enter)='getEdamamRecipes(searchValue)'>
   </mat-form-field>
@@ -40,5 +46,4 @@
         <tr *matRowDef="let row; columns: dataEdamamColumns;" mat-row></tr>
       </table>
     </div>
-  </div>
-   -->
+  </div>  
