--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -1,7 +1,7 @@
 <nav class="navBar">
   <a class="active" href="recipe-create">Home</a>
-  <a  href="recipe-search">Search Recipe</a>
-  <a  href="#home">My Recipe</a>
+  <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
+  <a  [routerLink]="['/recipe-list']" >My Recipe</a>
   <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
 
