--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.html
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.html
@@ -1,6 +1,6 @@
 <nav class="navBar">
-    <a class="active" href="recipe-create">Home</a>
-    <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
+  <a  [routerLink]="['/recipes']" >Home</a>
+    <a  class="active" [routerLink]="['/recipe-search']" >Search Recipe</a>
     <a  [routerLink]="['/recipe-list']" >My Recipe</a>
     <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
