--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -1,8 +1,8 @@
 <nav class="navBar">
-  <a class="active" href="recipe-create">Home</a>
-  <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
-  <a  [routerLink]="['/recipe-list']" >My Recipe</a>
-  <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
+  <a [routerLink]="['/recipes']" >Home</a>
+  <a [routerLink]="['/recipe-search']" >Search Recipe</a>
+  <a [routerLink]="['/recipe-list']" >My Recipe</a>
+  <a class="active" [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
 <div class="button-row">
   <a [routerLink]="['/recipes']" color="primary" mat-raised-button>
@@ -12,21 +12,21 @@
 <form (ngSubmit)="onFormSubmit(recipeForm.value)" [formGroup]="recipeForm">
   <mat-form-field class="example-full-width">
     <input [errorStateMatcher]="matcher" formControlName="title" matInput
-           placeholder="Title">
+            placeholder="Title">
     <mat-error>
       <span *ngIf="!recipeForm.get('title').valid && recipeForm.get('title').touched">Please enter Title</span>
     </mat-error>
   </mat-form-field>
   <mat-form-field class="example-full-width">
     <input [errorStateMatcher]="matcher" formControlName="ingredients" matInput
-           placeholder="Ingredients">
+            placeholder="Ingredients">
     <mat-error>
       <span *ngIf="!recipeForm.get('ingredients').valid && recipeForm.get('ingredients').touched">Please enter Ingredients</span>
     </mat-error>
   </mat-form-field>
   <mat-form-field class="example-full-width">
     <input [errorStateMatcher]="matcher" formControlName="instructions" matInput
-           placeholder="instructions">
+            placeholder="instructions">
     <mat-error>
       <span *ngIf="!recipeForm.get('instructions').valid && recipeForm.get('instructions').touched">Please enter Instructions</span>
     </mat-error>
@@ -36,4 +36,4 @@
       <mat-icon>save</mat-icon>
     </button>
   </div>
-</form>
+</form>  
