--- a/RecipeHelper/src/app/recipe-detail/recipe-detail.component.html
+++ b/RecipeHelper/src/app/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,5 @@
 <nav class="navBar">
-  <a class="active" href="recipe-create">Home</a>
+  <a  class="active" [routerLink]="['/recipes']" >Home</a>
   <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
   <a  [routerLink]="['/recipe-list']" >My Recipe</a>
   <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
