updates to html/css

--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -9,6 +9,8 @@
   <h1>
     Welcome to Recipe Remedies
   </h1>
-
-  
+  <h3>Search: </h3>
+  <div class="logo">
+    <img src="reciperemedieslogo.jpeg" alt="testText">
+  </div>
 </body>
