--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -5,7 +5,7 @@
   <a class="active" [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
 <div class="button-row">
-  <a [routerLink]="['/recipes']" color="primary" mat-raised-button>
+  <a [routerLink]="['/recipe-search']" color="primary" mat-raised-button>
     Back to Search <mat-icon>search</mat-icon>
   </a>
 </div>
