--- a/RecipeHelper/src/app/recipe/recipe.component.css
+++ b/RecipeHelper/src/app/recipe/recipe.component.css
@@ -22,6 +22,7 @@
   background-color: #333;
   overflow: hidden;
   color: white;
+  margin-bottom: 5rem;
 }
 
 .navBar a {
@@ -45,5 +46,8 @@
 }
 
 h1 {
+  text-align: center;
+}
+h3 {
   text-align: center;
 }
