updates to search and my Recipe pages

--- a/RecipeHelper/src/app/recipe-list/recipe-list.component.html
+++ b/RecipeHelper/src/app/recipe-list/recipe-list.component.html
@@ -5,6 +5,8 @@
   <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
 </nav>
 
+<h3 class="title">View, Edit, and Delete your Recipes!</h3>
+
 <div>
   <div class="example-container mat-elevation-z8">
     <table #table [dataSource]="dataStoredRecipes" mat-table>
