--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -12,6 +12,6 @@
     </h1>
 
     <img src="assets/reciperemedieslogo.jpeg" alt="testText">
-    <h3>Our Page Aims to help YOU find your favorite recipes, favorite them, and even create your own!</h3>
+    <h3>Our page aims to help YOU find your favorite recipes, favorite them, and even create your own!</h3>
   </div>
 </body>
