--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.css
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.css
@@ -15,6 +15,10 @@
   margin: 10px 0;
 }
 
+.title {
+  text-align: center;
+}
+
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* NAVBAR */
 
@@ -22,7 +26,7 @@
   background-color: #333;
   overflow: hidden;
   color: white;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 .navBar a {
