--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.css
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.css
@@ -18,6 +18,9 @@
 .title {
   text-align: center;
 }
+#icon-padding {
+  vertical-align: middle;
+}
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* NAVBAR */
