--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -2,7 +2,7 @@
   <a  class="active" [routerLink]="['/recipes']" >Home</a>
   <a  [routerLink]="['/recipe-search']" >Search Recipe <mat-icon id="icon-padding">search</mat-icon></a>
   <a  [routerLink]="['/recipe-list']" >My Recipe <mat-icon id="icon-padding">list_alt</mat-icon></a>
-  <a  [routerLink]="['/recipe-create']" >Create Reicpe <mat-icon id="icon-padding">note_add</mat-icon></a>
+  <a  [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
 </nav>
 <h3 class="title">Create and add Recipes to your favorites list!</h3>
 
