--- a/RecipeHelper/src/app/recipe-detail/recipe-detail.component.css
+++ b/RecipeHelper/src/app/recipe-detail/recipe-detail.component.css
@@ -15,6 +15,10 @@
   margin: 10px 0;
 }
 
+#icon-padding {
+  vertical-align: middle;
+}
+
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* NAVBAR */
 
