--- a/RecipeHelper/src/app/recipe-edit/recipe-edit.component.css
+++ b/RecipeHelper/src/app/recipe-edit/recipe-edit.component.css
@@ -14,6 +14,9 @@
 .button-row {
   margin: 10px 0;
 }
+#icon-padding {
+  vertical-align: middle;
+}
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* NAVBAR */
