--- a/RecipeHelper/src/app/recipe-edit/recipe-edit.component.html
+++ b/RecipeHelper/src/app/recipe-edit/recipe-edit.component.html
@@ -1,8 +1,8 @@
 <nav class="navBar">
   <a  class="active" [routerLink]="['/recipes']" >Home</a>
-  <a  [routerLink]="['/recipe-search']" >Search Recipe</a>
-  <a  [routerLink]="['/recipe-list']" >My Recipe</a>
-  <a  [routerLink]="['/recipe-create']" >Create Reicpe</a>
+  <a  [routerLink]="['/recipe-search']" >Search Recipe <mat-icon id="icon-padding">search</mat-icon></a>
+  <a  [routerLink]="['/recipe-list']" >My Recipe <mat-icon id="icon-padding">list_alt</mat-icon></a>
+  <a  [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
 </nav>
 <div class="button-row">
   <a mat-raised-button color="primary" [routerLink]="['/recipes']">
