--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -11,7 +11,27 @@
       Welcome to Recipe Remedies
     </h1>
 
-    <img src="assets/reciperemedieslogo.jpeg" alt="testText">
+    <img src="assets/reciperemedieslogo.jpeg" alt="RecipeHelperLogo">
     <h3>Our page aims to help YOU find your favorite recipes, favorite them, and even create your own!</h3>
   </div>
 </body>
+
+<div class="main-background">
+  <nav class="navBar">
+    <a  class="active" [routerLink]="['/recipes']" >Home</a>
+    <a  [routerLink]="['/recipe-search']" >Search Recipe <mat-icon id="icon-padding">search</mat-icon></a>
+    <a  [routerLink]="['/recipe-list']" >My Recipe <mat-icon id="icon-padding">list_alt</mat-icon></a>
+    <a  [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
+  </nav>
+  
+  <body>
+    <div class="logo">
+      <h1>
+        Welcome to Recipe Remedies
+      </h1>
+  
+      <img src="assets/reciperemedieslogo.jpeg" alt="RecipeHelperLogo">
+      <h3>Our page aims to help YOU find your favorite recipes, favorite them, and even create your own!</h3>
+    </div>
+  </body>
+</div>
