--- a/RecipeHelper/src/app/recipe/recipe.component.css
+++ b/RecipeHelper/src/app/recipe/recipe.component.css
@@ -1,37 +1,18 @@
-body {
-  background-color: seagreen;
+.main {
+  background-color: rgba(51, 51, 51, 255);
+  color: white;
+  text-align: center;
 }
-
-.example-container {
-  display: flex;
-  flex-direction: column;
-  max-height: 500px;
-  min-width: 300px;
-  overflow: auto;
+.title {
+  color: green;
+  padding-top: 1rem;
 }
-
-.isbn-col {
-  flex: 0 0 100px !important;
-  white-space: unset !important;
-}
-
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 25%;
   height: auto;
-}
-
-h1 {
-  text-align: center;
-}
-h3 {
-  text-align: center;
-}
-
-#icon-padding {
-  vertical-align: middle;
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
@@ -63,5 +44,4 @@ h3 {
   background-color: rgb(55, 55, 216);
   color: white;
   width: auto;
-  height: auto;
 }
