--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -6,8 +6,8 @@
         <a  [routerLink]="['/recipe-list']" >My Recipe <mat-icon id="icon-padding">list_alt</mat-icon></a>
         <a  [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
       </nav>
-      <div class="logo">
-        <h1>
+      <div class="main">
+        <h1 class="title">
           Welcome to Recipe Remedies
         </h1>
     
