--- a/RecipeHelper/src/styles.css
+++ b/RecipeHelper/src/styles.css
@@ -4,3 +4,37 @@ body {
   margin: 0 5%;
   background-color: rgba(247, 209, 129, 255);
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* NAVBAR */
+
+.navBar {
+  background-color: #333;
+  overflow: hidden;
+  color: white;
+  margin-bottom: 3rem;
+}
+
+.navBar a {
+  float: left;
+  color: #f2f2f2;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navBar a:hover {
+  background-color: #f6d081;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.navBar a.active {
+  background-color: rgb(55, 55, 216);
+  color: white;
+}
+/* Aligns icons with text within navBar */
+#icon-padding {
+  vertical-align: middle;
+}
