--- a/RecipeHelper/src/app/recipe/recipe.component.css
+++ b/RecipeHelper/src/app/recipe/recipe.component.css
@@ -1,7 +1,10 @@
-body {
-  background-color: seagreen;
+.main {
+  background-color: rgba(51, 51, 51, 255);
+  color: white;
+  text-align: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
-
 .example-container {
   display: flex;
   flex-direction: column;
@@ -20,48 +23,5 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 25%;
-  height: auto;
-}
-
-h1 {
-  text-align: center;
-}
-h3 {
-  text-align: center;
-}
-
-#icon-padding {
-  vertical-align: middle;
-}
-
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-/* NAVBAR */
-
-.navBar {
-  background-color: #333;
-  overflow: hidden;
-  color: white;
-  margin-bottom: 4rem;
-}
-
-.navBar a {
-  float: left;
-  color: #f2f2f2;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.navBar a:hover {
-  background-color: #f6d081;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.navBar a.active {
-  background-color: rgb(55, 55, 216);
-  color: white;
-  width: auto;
   height: auto;
 }
