removed local css

--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -1,8 +1,8 @@
 <nav class="navBar">
   <a [routerLink]="['/recipes']" >Home</a>
-  <a class="active" [routerLink]="['/recipe-search']" >Search Recipe <mat-icon id="icon-padding">search</mat-icon></a>
+  <a [routerLink]="['/recipe-search']" >Search Recipe <mat-icon id="icon-padding">search</mat-icon></a>
   <a [routerLink]="['/recipe-list']" >My Recipe <mat-icon id="icon-padding">list_alt</mat-icon></a>
-  <a [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
+  <a class="active" [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
 </nav>
 <h3 class="title">Create and add Recipes to your favorites list!</h3>
 
