updated class name
changed from main to main-body

--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -6,7 +6,7 @@
     <a [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
   </nav>
     <body>
-      <div class="main">
+      <div class="main-body">
         <h1>
           Welcome to Recipe Remedies
         </h1>
