--- a/RecipeHelper/src/app/recipe/recipe.component.css
+++ b/RecipeHelper/src/app/recipe/recipe.component.css
@@ -1,23 +1,10 @@
-.main {
+.main-body {
   background-color: rgba(51, 51, 51, 255);
   color: white;
   text-align: center;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.example-container {
-  display: flex;
-  flex-direction: column;
-  max-height: 500px;
-  min-width: 300px;
-  overflow: auto;
-}
-
-.isbn-col {
-  flex: 0 0 100px !important;
-  white-space: unset !important;
-}
-
 img {
   display: block;
   margin-left: auto;
