--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.css
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.css
@@ -1,3 +1,8 @@
+#search-body.main-body {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .example-container {
   display: flex;
   flex-direction: column;
