--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.html
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.html
@@ -8,7 +8,7 @@
 <body>
   <div class="main-body" id="search-body">
 
-    <h3 class="title">Search the web for your favorite Recipes!</h3>
+    <p class="title">Search the web for your favorite Recipes!</p>
 
     <mat-form-field  color='primary' id='search-input' class='full-width' appearance='outline'>
       <mat-label color='red'>Search Recipes</mat-label>
