global body-padding added

--- a/RecipeHelper/src/app/recipe-list/recipe-list.component.html
+++ b/RecipeHelper/src/app/recipe-list/recipe-list.component.html
@@ -5,8 +5,9 @@
   <a [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
 </nav>
 
-
-<h3 class="title">View, Edit, and Delete your Recipes!</h3>
+<body>
+  <div class="main-body">
+    <h3 class="title">View, Edit, and Delete your Recipes!</h3>
 
 <div>
   <div class="example-container mat-elevation-z8">
@@ -35,3 +36,5 @@
     </table>
   </div>
 </div>
+  </div>
+</body>
