--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.html
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.html
@@ -6,7 +6,7 @@
 </nav>
 
 <body>
-  <div class="main-body" id="search-body">
+  <div class="main-body" id="body-padding">
 
     <p class="title">Search the web for your favorite Recipes!</p>
 
