--- a/RecipeHelper/src/styles.css
+++ b/RecipeHelper/src/styles.css
@@ -12,6 +12,10 @@ body {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+#body-padding.main-body {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* NAVBAR */
 
