--- a/RecipeHelper/src/app/recipe-list/recipe-list.component.html
+++ b/RecipeHelper/src/app/recipe-list/recipe-list.component.html
@@ -6,7 +6,7 @@
 </nav>
 
 <body>
-  <div class="main-body">
+  <div class="main-body" id="body-padding">
     <h3 class="title">View, Edit, and Delete your Recipes!</h3>
 
 <div>
