--- a/RecipeHelper/src/styles.css
+++ b/RecipeHelper/src/styles.css
@@ -15,7 +15,9 @@ body {
 #body-padding.main-body {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+  padding-bottom: 1.5rem;
 }
+
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* NAVBAR */
 
