--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -4,37 +4,44 @@
   <a [routerLink]="['/recipe-list']" >My Recipe <mat-icon id="icon-padding">list_alt</mat-icon></a>
   <a class="active" [routerLink]="['/recipe-create']" >Create Recipe <mat-icon id="icon-padding">note_add</mat-icon></a>
 </nav>
-<h3 class="title">Create and add Recipes to your favorites list!</h3>
-<div class="button-row">
-  <a [routerLink]="['/recipe-search']" color="primary" mat-raised-button>
-    Back to Search <mat-icon>search</mat-icon>
-  </a>
-</div>
-<form (ngSubmit)="onFormSubmit(recipeForm.value)" [formGroup]="recipeForm">
-  <mat-form-field class="example-full-width">
-    <input [errorStateMatcher]="matcher" formControlName="title" matInput
-            placeholder="Title">
-    <mat-error>
-      <span *ngIf="!recipeForm.get('title').valid && recipeForm.get('title').touched">Please enter Title</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input [errorStateMatcher]="matcher" formControlName="ingredients" matInput
-            placeholder="Ingredients">
-    <mat-error>
-      <span *ngIf="!recipeForm.get('ingredients').valid && recipeForm.get('ingredients').touched">Please enter Ingredients</span>
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input [errorStateMatcher]="matcher" formControlName="instructions" matInput
-            placeholder="instructions">
-    <mat-error>
-      <span *ngIf="!recipeForm.get('instructions').valid && recipeForm.get('instructions').touched">Please enter Instructions</span>
-    </mat-error>
-  </mat-form-field>
-  <div class="button-row">
-    <button [disabled]="!recipeForm.valid" color="primary" mat-raised-button type="submit">
-      <mat-icon>save</mat-icon>
-    </button>
+
+<body>
+  <div class="main-body" id="body-padding">
+    <h3 class="title">Create and add Recipes to your favorites list!</h3>
+
+    <div class="button-row">
+      <a [routerLink]="['/recipe-search']" color="primary" mat-raised-button>
+        Back to Search <mat-icon>search</mat-icon>
+      </a>
+    </div>
+    
+    <form (ngSubmit)="onFormSubmit(recipeForm.value)" [formGroup]="recipeForm">
+      <mat-form-field class="example-full-width">
+        <input [errorStateMatcher]="matcher" formControlName="title" matInput
+                placeholder="Title">
+        <mat-error>
+          <span *ngIf="!recipeForm.get('title').valid && recipeForm.get('title').touched">Please enter Title</span>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input [errorStateMatcher]="matcher" formControlName="ingredients" matInput
+                placeholder="Ingredients">
+        <mat-error>
+          <span *ngIf="!recipeForm.get('ingredients').valid && recipeForm.get('ingredients').touched">Please enter Ingredients</span>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input [errorStateMatcher]="matcher" formControlName="instructions" matInput
+                placeholder="instructions">
+        <mat-error>
+          <span *ngIf="!recipeForm.get('instructions').valid && recipeForm.get('instructions').touched">Please enter Instructions</span>
+        </mat-error>
+      </mat-form-field>
+      <div class="button-row">
+        <button [disabled]="!recipeForm.valid" color="primary" mat-raised-button type="submit">
+          <mat-icon>save</mat-icon>
+        </button>
+      </div>
+    </form>  
   </div>
-</form>  
+</body>
