updated form UI

--- a/RecipeHelper/src/app/recipe-search/recipe-search.component.css
+++ b/RecipeHelper/src/app/recipe-search/recipe-search.component.css
@@ -18,3 +18,8 @@
 .title {
   text-align: center;
 }
+
+::ng-deep .mat-focused .mat-form-field-label {
+  /*change color of label*/
+  color: white !important;
+}
