--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -23,6 +23,9 @@
           <span *ngIf="!recipeForm.get('title').valid && recipeForm.get('title').touched">Please enter Title</span>
         </mat-error>
       </mat-form-field>
+    </form> 
+
+    <form (ngSubmit)="onFormSubmit(recipeForm.value)" [formGroup]="recipeForm">
       <mat-form-field class="example-full-width">
         <input [errorStateMatcher]="matcher" formControlName="ingredients" matInput
                 placeholder="Ingredients">
@@ -30,6 +33,9 @@
           <span *ngIf="!recipeForm.get('ingredients').valid && recipeForm.get('ingredients').touched">Please enter Ingredients</span>
         </mat-error>
       </mat-form-field>
+    </form>
+
+    <form (ngSubmit)="onFormSubmit(recipeForm.value)" [formGroup]="recipeForm">
       <mat-form-field class="example-full-width">
         <input [errorStateMatcher]="matcher" formControlName="instructions" matInput
                 placeholder="instructions">
@@ -37,11 +43,12 @@
           <span *ngIf="!recipeForm.get('instructions').valid && recipeForm.get('instructions').touched">Please enter Instructions</span>
         </mat-error>
       </mat-form-field>
+    </form>
+
       <div class="button-row">
         <button [disabled]="!recipeForm.valid" color="primary" mat-raised-button type="submit">
           <mat-icon>save</mat-icon>
         </button>
-      </div>
-    </form>  
+      </div> 
   </div>
 </body>
