--- a/RecipeHelper/src/app/recipe-create/recipe-create.component.html
+++ b/RecipeHelper/src/app/recipe-create/recipe-create.component.html
@@ -45,6 +45,33 @@
           </mat-error>
         </mat-form-field>
       </form>
+      <div *ngIf="voiceActiveSectionDisabled; else voicesection;">
+        <button type="button" (click)="startVoiceRecognition()">Record</button>
+      </div>
+      
+      <ng-template #voicesection>
+        <ng-container *ngIf="!voiceActiveSectionError; else failure">
+          <ng-container *ngIf="voiceText; else start">
+            <span style="color: black;">{{voiceText}}</span>
+          </ng-container>
+          <ng-template #start>
+            <ng-container
+              *ngIf="voiceActiveSectionListening; else beginning">
+              <span>Listening...</span>
+            </ng-container>
+            <ng-template #beginning>
+              <span>Start talking...</span>
+            </ng-template>
+          </ng-template>
+        </ng-container>
+        <ng-template #failure>
+          <span>Didn't catch that</span>
+        </ng-template>
+        <div>
+          <button (click)="closeVoiceRecognition()">Close</button>
+          <button (click)="startVoiceRecognition()">Restart</button>
+        </div>
+      </ng-template>
     </div>
 
       <div class="button-row">
@@ -53,31 +80,4 @@
         </button>
       </div> 
   </div>
-  <div *ngIf="voiceActiveSectionDisabled; else voicesection;">
-    <button type="button" (click)="startVoiceRecognition()">Record</button>
-  </div>
-  <ng-template #voicesection>
-    <ng-container *ngIf="!voiceActiveSectionError; else failure">
-      <ng-container *ngIf="voiceText; else start">
-        <span>{{voiceText}}</span>
-      </ng-container>
-      <ng-template #start>
-        <ng-container
-          *ngIf="voiceActiveSectionListening; else beginning">
-          <span>Listening...</span>
-        </ng-container>
-        <ng-template #beginning>
-          <span>Start talking...</span>
-        </ng-template>
-      </ng-template>
-    </ng-container>
-    <ng-template #failure>
-      <span>Didn't catch that</span>
-    </ng-template>
-    <div>
-      <button (click)="closeVoiceRecognition()">Close</button>
-      <button (click)="startVoiceRecognition()">Restart</button>
-    </div>
-  </ng-template>
-</form>
 </body>
