--- a/RecipeHelper/src/app/recipe/recipe.component.html
+++ b/RecipeHelper/src/app/recipe/recipe.component.html
@@ -12,7 +12,7 @@
         </h1>
     
         <img src="assets/reciperemedieslogo.jpeg" alt="RecipeHelperLogo">
-        <h3>Our page aims to help YOU find your favorite recipes, favorite them, and even create your own!</h3>
+        <p>Our page aims to help YOU find your favorite recipes, favorite them, and even create your own!</p>
       </div>
     </body>
 </html>
