--- a/RecipeHelper/src/styles.css
+++ b/RecipeHelper/src/styles.css
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+/* global body style */
 body {
   margin: 0 5%;
   background-color: rgba(247, 209, 129, 255);
 }
-
+/* global main-body style */
 .main-body {
   background-color: rgba(51, 51, 51, 255);
   color: white;
@@ -12,6 +13,7 @@ body {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+/* global padding style */
 #body-padding.main-body {
   padding-left: 1rem;
   padding-right: 1rem;
